[gd_scene load_steps=4 format=3 uid="uid://dsne66h4wu4po"]

[ext_resource type="Script" path="res://boids/swarm_brain.gd" id="1_63red"]
[ext_resource type="Script" path="res://boids/debug_boid_spawn.gd" id="2_fy16j"]
[ext_resource type="Script" path="res://boids/swarm_overlord.gd" id="3_nuwsc"]

[node name="BoidTest" type="Node2D"]
script = ExtResource("2_fy16j")

[node name="SwarmBrain" type="Node2D" parent="."]
script = ExtResource("1_63red")
separation_weight = 30.0
alignment_weight = 0.2
cohesion_weight = 0.15
separation_radius = 40.0
cohesion_radius = 150.0
world_weight = 35.0
maximum_speed = 300.0
acceleration = 50.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 2)
zoom = Vector2(0.4, 0.4)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Get Boidin'"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Clear Goal"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Kill All Boids"

[node name="Goal1" type="Node2D" parent="."]
position = Vector2(-1053, 345)

[node name="Button" type="Button" parent="Goal1"]
offset_right = 8.0
offset_bottom = 8.0
text = "Goal 1"

[node name="Goal2" type="Node2D" parent="."]
position = Vector2(651, -180)

[node name="Button" type="Button" parent="Goal2"]
offset_right = 8.0
offset_bottom = 8.0
text = "Goal 2"

[node name="SwarmOverlord" type="Node2D" parent="."]
script = ExtResource("3_nuwsc")

[connection signal="boid" from="." to="SwarmBrain" method="spawn_boids"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_pressed"]
